# tmux-pilot

./: Cargo.toml  README.md  config.example.toml  pilot.tmux  tcs.tmux
.github/workflows/: release.yml
docs/: demo.tape  record-demo.sh
scripts/: install.sh
skills/pilot-watcher/: SKILL.md
src/: main.rs  store.rs  watcher.rs  wizard.rs
src/azdo/: client.rs  demo.rs  mod.rs
src/config/: mod.rs  types.rs
src/copilot/: mod.rs
src/tmux/: mod.rs  session.rs  window.rs
src/tui/: app.rs  fuzzy.rs  mod.rs  notifications.rs  theme.rs  watchers.rs
